# ceuk-marking

./: .gitignore  ADMIN.md  ARCHITECTURE.md  DATA.md  Dockerfile  README.md  SCORING.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  mirror.yml  tests.yml
ceuk-marking/: asgi.py  settings.py  urls.py  wsgi.py
conf/: crontab-example  settings.py-example
crowdsourcer/: admin.py  filters.py  forms.py  import_utils.py  marking.py  middleware.py  mixins.py  models.py  scoring.py  views.py  volunteers.py
crowdsourcer/fixtures/: assignments.json  audit_assignments.json  audit_ca_marks.json  audit_duplicate_responses.json  audit_ex_multi_option_responses.json  audit_extra_council_responses.json  audit_marking.json  audit_marking_many_marks.json  audit_responses.json  audit_second_session_marks.json  authorities.json  authorities_ca.json  basics.json  ca_questions.json  ca_sections.json  copy_test_data.json  council_responses.json  negative_audit_responses.json  negative_questions.json  non_example_users.json  options.json  questions.json  responses.json  ror_responses.json  session_properties.json  test_data_questions.csv  test_data_responses.csv  users.json  welcome_email_users.json
crowdsourcer/migrations/: 0003_add_question_type.py  0004_add_how_question_marked.py  0005_add_extra_question_fields.py  0006_update_response_field.py  0007_not_all_response_fields_mandatory.py  0008_allow_blank_response_fields.py  0009_add_response_history.py  0010_extra_response_verbose_labels.py  0011_response_multi_option.py  (+51 more)
utils/: data_checking.py  mapit.py
(+188 files in other folders)
