[tool.poetry]
name = "ceuk-marking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.20"
django-environ = "^0.9.0"
psycopg2 = "^2.9.5"
django-sslserver = "^0.22"
requests-cache = "^0.9.7"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
django-libsass = "^0.9"
django-bootstrap5 = "^22.2"
django-simple-history = "^3.2.0"
mysoc-dataset = "^0.3.0"
django-json-widget = "^2.0.1"
django-filter = "^24.3"
django = "4.2.22"
requests = "2.32.4"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
django-debug-toolbar = "^3.8.1"
flake8 = "^6.0.0"
isort = "^5.11.1"
coverage = "^6.5.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["crowdsourcer", "conf"]
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
extend_skip_glob = ["*/migrations/*"]
